--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@ title: Kadeřnictví Vlasy s Ráďou
         <div class="form">
             <h2>Kontaktní formulář</h2>
 
-            <!-- Kontaktní formulář -->>
+            <!-- Kontaktní formulář -->
             <div class="form--tool">
-                <form action="" method="post"></form>
+                <form action="" method="post">..</form>
             </div>
             
         </div>
