--- a/galerie.html
+++ b/galerie.html
@@ -5,7 +5,7 @@ title: Kadeřnictví Vlasy s Ráďou
 
 <section class="galerie">
     <div class="galerie__pic">
-        <img src="/images/slider01-s.png">
+        <img src="/images/slider01.png">
     </div>
     <div class="galerie__text">
         <h1>Proměny mých spokojených klientek</h1>
@@ -17,9 +17,9 @@ title: Kadeřnictví Vlasy s Ráďou
         <img src="/images/kreativni-barveni-02-kadernictvi-liberec.jpg" alt="">
         <img src="/images/kreativni-barveni-03-kadernictvi-liberec.jpg" alt="">
         <img src="/images/barveni-vlasu-01-kadernictvi-liberec.jpg" alt="">
-        <img src="/images/kreativni-barveni-06-kadernictvi-liberec.jpg" alt="">
-        <img src="/images/meliry-02-kadernictvi-liberec.jpg" alt="">
         <img src="/images/barveni-vlasu-03-kadernictvi-liberec.jpg" alt="">
+        <img src="/images/meliry-02-kadernictvi-liberec.jpg" alt="">
+        <img src="/images/kreativni-barveni-06-kadernictvi-liberec.jpg" alt="">
         <img src="/images/meliry-03-kadernictvi-liberec.jpg" alt=""> 
         <img src="/images/kreativni-barveni-05-kadernictvi-liberec.jpg" alt="">
         <img src="/images/barveni-vlasu-02-kadernictvi-liberec.jpg" alt="">    
