--- a/index.html
+++ b/index.html
@@ -139,7 +139,18 @@ title: Kadeřnictví Vlasy s Ráďou
 
             <!-- Kontaktní formulář -->
             <div class="form--tool">
-                <form action="" method="post">..</form>
+                <form action="" method="post">
+
+                    <input type="text" name="jmeno" id="jmeno" maxlength="30"  >
+                    <input type="tel" name="telefon" id="">
+                    <input type="text" name="zprava" id="">
+
+
+
+
+
+
+                </form>
             </div>
             
         </div>
