--- a/index.html
+++ b/index.html
@@ -139,16 +139,23 @@ title: Kadeřnictví Vlasy s Ráďou
 
             <!-- Kontaktní formulář -->
             <div class="form--tool">
-                <form action="" method="post">
-
-                    <input type="text" name="jmeno" id="jmeno" maxlength="30"  >
-                    <input type="tel" name="telefon" id="">
-                    <input type="text" name="zprava" id="">
-
-
-
-
-
+                <form action="https://formular.itgirls.cz" method="post">
+                    <div class="form-field">
+                        <label for="jmeno">Jméno a příjmení:<span class="required">*</span></label>
+                        <input type="text" name="jmeno" id="jmeno" maxlength="30" placeholder="" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="telefon">Váš telefon:<span class="required">*</span></label>
+                        <input type="tel" name="telefon" id="telefon" required>
+                    </div>
+                    <div class="form-field">
+                        <label for="zprava">Sem napište svůj dotaz:</label>
+                        <textarea name="zprava" id="zprava" placeholder="" cols="50" rows="8" required>
+                        </textarea>
+                    </div>
+                    <div class="button">
+                        <button type="submit" name="tlacitko">Odeslat</button>
+                    </div>
 
                 </form>
             </div>
